--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CIT15000_Module1</title>
+  <title>CodePen - CIT15000_Mod1_Functions</title>
   
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="name"></div>
-<div class="home"></div>
-<div class="major"></div>
+<h1>Annual Gas Mileage Expenses</h1>
+
+<div class="totalCarGasExpense"></div>
 <!-- partial -->
-  <script type="module" src="./script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
